fixed image not covering div

--- a/blog/blog-css/main.css
+++ b/blog/blog-css/main.css
@@ -4,6 +4,7 @@
 
 .paint-brick-wall {
     background: url("../images/painting-brick-wall.jpg");
+    background-size: cover;
 }
 
 
